# rgit

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  TODO.md  serve.py
crates/rgit-bin/: Cargo.toml
crates/rgit-bin/src/: main.rs
crates/rgit-core/: Cargo.toml
crates/rgit-core/src/: cache.rs  cmd.rs  config.rs  context.rs  filter.rs  html.rs  lib.rs  macros.rs  query.rs  repo.rs  scan_tree.rs  snapshot.rs
crates/rgit-core/src/git/: commit.rs  diff.rs  mod.rs  refs.rs  tree.rs
crates/rgit-ui/: Cargo.toml
crates/rgit-ui/src/: about.rs  atom.rs  blob.rs  clone.rs  commit.rs  diff.rs  lib.rs  log.rs  patch.rs  plain.rs  rawdiff.rs  refs.rs  repolist.rs  shared.rs  snapshot.rs  summary.rs  tag.rs  tree.rs
examples/: cgitrc.example  serve_with_python.py
