[workspace]
members = ["crates/rgit-core", "crates/rgit-ui", "crates/rgit-bin"]
resolver = "2"

[workspace.dependencies]
gix = { version = "0.72", default-features = false, features = ["blocking-network-client"] }
similar = "2"
flate2 = "1"
tar = "0.4"
zip = "2"

[profile.release]
lto = true
strip = true
